# mijn-website-

./: Btc  Cargo.toml  Index7.html  Test.py  index.html  index10.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html  worker.js
.github/workflows/: deploy.yml
.github/workflows/.github/workflows/src/: index.html  worker.js
src/: lib.rs
