[package]
name = "slice_sniper_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
# Hier voegen we de 'arithmetic' en 'ecdsa' features toe
k256 = { version = "0.13.3", features = ["arithmetic", "ecdsa"] }
sha2 = "0.10.8"
ripemd = "0.1.3"
